--- a/login.html
+++ b/login.html
@@ -43,7 +43,7 @@
 		<button class="btn btn-lg btn-primary btn-block" type="submit"> <a href="/" style="color: #fff; text-decoration: none">Connexion</a> </button>
 	  <div style="margin-top: 40px">
 			<h5>Vous êtes nouveaux habitants ? <br>Bienvenue à l'EcoQuartier du domaine 😊 </h5>
-			<p>Faites-vous connaitre à  <a href="#" target="_blank" rel="noopener noreferrer">cette adresse.</a></p>
+			<p>Faites-vous connaitre à  <a href="#" target="_blank" rel="noopener noreferrer">cette adresse tto.</a></p>
 	  
 	  </div>
 	
